// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <header
    class="_header_vbv1y_1"
  >
    <div
      class="_rightNav_vbv1y_23"
    >
      <a
        class="_appName_vbv1y_9"
        href="/ideas"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_vbv1y_22"
    >
      <a
        class="_menuItem_vbv1y_28"
        href="/account"
      >
        Account
      </a>
      <button
        class="_container_7jj5b_1 _menuItem_vbv1y_28 _btnSuccess_7jj5b_21"
        data-testid="button"
        type="button"
      >
        Log Out
      </button>
    </div>
  </header>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <header
    class="_header_vbv1y_1"
  >
    <div
      class="_rightNav_vbv1y_23"
    >
      <a
        class="_appName_vbv1y_9"
        href="/ideas"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_vbv1y_22"
    >
      <button
        class="_container_7jj5b_1 _menuItem_vbv1y_28 _btnText_7jj5b_26"
        data-testid="button"
        type="button"
      >
        Log In
      </button>
      <button
        class="_container_7jj5b_1 _btnSuccess_7jj5b_21"
        data-testid="button"
        type="button"
      >
        Get Started
      </button>
    </div>
  </header>
</div>
`;
